add store and auth methods
