# api/server/api/controllers/login/router.ts
@@ -1,0 +1,4 @@
+import express from 'express';
+import controller from './controller';
+
+export default express.Router().post('/', controller.login);
